--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"test": "ng test",
 		"prettier:fix": "prettier --write .",
 		"lint": "ng lint",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"lint-staged": "lint-staged"
 	},
 	"private": true,
 	"dependencies": {
@@ -49,6 +50,7 @@
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.0.0",
+		"lint-staged": "^13.2.1",
 		"prettier": "^2.8.7",
 		"typescript": "~4.9.4"
 	}
