--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,8 @@
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
-						"scripts": []
+						"styles": ["src/styles.scss", "src/scss/_custom.scss"],
+						"scripts": ["./node_modules/jquery/dist/jquery.min.js"]
 					},
 					"configurations": {
 						"production": {
@@ -85,7 +85,7 @@
 						"tsConfig": "tsconfig.spec.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
+						"styles": ["src/styles.scss"],
 						"scripts": []
 					}
 				},
