--- a/package.json
+++ b/package.json
@@ -20,11 +20,17 @@
 		"@angular/compiler": "^15.2.0",
 		"@angular/core": "^15.2.0",
 		"@angular/forms": "^15.2.0",
-		"@angular/material": "^15.2.7",
 		"@angular/platform-browser": "^15.2.0",
 		"@angular/platform-browser-dynamic": "^15.2.0",
 		"@angular/router": "^15.2.0",
-		"rxjs": "~7.8.0",
+		"@coreui/angular": "^4.4.1",
+		"@coreui/coreui": "^4.2.6",
+		"@coreui/icons": "^3.0.1",
+		"@coreui/icons-angular": "^4.4.1",
+		"@sweetalert2/ngx-sweetalert2": "^12.1.0",
+		"jquery": "^3.6.4",
+		"rxjs": "^7.8.0",
+		"sweetalert2": "^11.7.3",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.12.0"
 	},
@@ -40,6 +46,7 @@
 		"@commitlint/cli": "^17.6.1",
 		"@commitlint/config-conventional": "^17.6.1",
 		"@types/jasmine": "~4.3.0",
+		"@types/jquery": "^3.5.16",
 		"@typescript-eslint/eslint-plugin": "5.48.2",
 		"@typescript-eslint/parser": "5.48.2",
 		"eslint": "^8.33.0",
