--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,11 @@
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["src/styles.scss", "src/scss/_custom.scss"],
+						"styles": [
+							"@angular/material/prebuilt-themes/indigo-pink.css",
+							"src/styles.scss",
+							"src/scss/_custom.scss"
+						],
 						"scripts": ["./node_modules/jquery/dist/jquery.min.js"]
 					},
 					"configurations": {
@@ -85,7 +89,7 @@
 						"tsConfig": "tsconfig.spec.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["src/styles.scss"],
+						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
 						"scripts": []
 					}
 				},
