--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
 		"@angular/platform-browser": "^15.2.0",
 		"@angular/platform-browser-dynamic": "^15.2.0",
 		"@angular/router": "^15.2.0",
-		"@coreui/angular": "^4.4.1",
-		"@coreui/coreui": "^4.2.6",
-		"@coreui/icons": "^3.0.1",
-		"@coreui/icons-angular": "^4.4.1",
 		"@sweetalert2/ngx-sweetalert2": "^12.1.0",
+		"bootstrap": "^5.2.3",
+		"crypto-js": "^4.1.1",
 		"jquery": "^3.6.4",
+		"material-icons": "^1.13.6",
 		"rxjs": "^7.8.0",
 		"sweetalert2": "^11.7.3",
 		"tslib": "^2.3.0",
@@ -46,6 +45,7 @@
 		"@angular/compiler-cli": "^15.2.0",
 		"@commitlint/cli": "^17.6.1",
 		"@commitlint/config-conventional": "^17.6.1",
+		"@types/crypto-js": "^4.1.1",
 		"@types/jasmine": "~4.3.0",
 		"@types/jquery": "^3.5.16",
 		"@typescript-eslint/eslint-plugin": "5.48.2",
