--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,9 @@
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": [
-							"@angular/material/prebuilt-themes/indigo-pink.css",
-							"src/styles.scss",
-							"src/scss/_custom.scss"
+							"@angular/material/prebuilt-themes/pink-bluegrey.css",
+							"./node_modules/bootstrap/dist/css/bootstrap.min.css",
+							"src/styles.scss"
 						],
 						"scripts": ["./node_modules/jquery/dist/jquery.min.js"]
 					},
@@ -89,7 +89,7 @@
 						"tsConfig": "tsconfig.spec.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
+						"styles": ["@angular/material/prebuilt-themes/pink-bluegrey.css"],
 						"scripts": []
 					}
 				},
