--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,11 @@
 	"compileOnSave": false,
 	"compilerOptions": {
 		"baseUrl": "./",
+		"paths": {
+			"@material/*": ["src/app/material/*"],
+			"@models/*": ["./src/app/models/*"],
+			"@environments/*": ["./src/environments/*"]
+		},
 		"outDir": "./dist/out-tsc",
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
