--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@angular/platform-browser": "^14.2.0",
 		"@angular/platform-browser-dynamic": "^14.2.0",
 		"@angular/router": "^14.2.0",
+		"@auth0/angular-jwt": "^5.1.2",
 		"@types/body-parser": "^1.19.2",
 		"ajv": "8.11.0",
 		"arrive": "2.4.1",
@@ -68,6 +69,7 @@
 		"@commitlint/config-conventional": "^17.6.1",
 		"@types/bootstrap": "4.5.0",
 		"@types/chartist": "0.11.1",
+		"@types/crypto-js": "^4.1.1",
 		"@types/google.maps": "3.47.4",
 		"@types/jasmine": "~4.0.0",
 		"@types/jasminewd2": "~2.0.10",
